--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pynacl==1.2.1
-discord.py[voice]==1.2.5
+pynacl
+discord.py[voice]
 pip
 youtube_dl
 colorlog
-cffi --only-binary all; sys_platform == 'win32'
